# mindfulness-nf

./: .gitignore  README.md  mindfulness-nf.sh  pyproject.toml
.github/workflows/: tests.yml
docs/: SUBJECT_README_TEMPLATE.md
docs/operator/: rehearsal.md
docs/superpowers/plans/: textual-tui.skill.md
docs/superpowers/specs/: 2026-03-20-textual-tui-design.md  2026-04-20-PR-body.md  2026-04-20-session-runner-design.md
materials/: FixationCross.pptx  participant-instructions.md  ra-procedure-manual.md  suicide-risk-management-plan.md
mindfulness_nf/: __main__.py  config.py  models.py  quality.py  sessions.py
mindfulness_nf/orchestration/: _process.py  cleanup.py  dicom_receiver.py  executor.py  external_image.py  fsl_subprocess.py  ica.py  layout.py  motion.py  murfi.py  preflight.py  psychopy.py  registration.py  scanner_source.py  session_runner.py  subjects.py  synthetic_volumes.py
mindfulness_nf/orchestration/executors/: __init__.py  dicom.py  fsl_stage.py  nf_run.py  setup.py  vsend.py
mindfulness_nf/tui/: app.py
mindfulness_nf/tui/screens/: __init__.py  localizer.py  neurofeedback.py  process.py  session.py  session_select.py  subject_entry.py  test.py
mindfulness_nf/tui/styles/: app.tcss
mindfulness_nf/tui/widgets/: __init__.py  log_panel.py  preflight_checklist.py  run_progress.py  run_table.py  status_light.py
murfi/docs/: firewall-debugging-2026-03-20.md  setup-guide.md
murfi/scripts/: createxml.sh  dicom_receiver.py  feedback.sh  launch_murfi.sh  rsn_get.py  run_session.sh  servedata.sh  servedata_custom.sh  test_pipeline.sh  test_vsend_receive.py
murfi/subjects/sub-001/xml/: rest.xml
murfi/subjects/sub-e2e/xml/: rtdmn.xml
murfi/subjects/sub-phantom/xml/: 2vol.xml
psychopy/balltask/: bids_tsv_convert_balltask.py  murfi_activation_communicator.py  rt-network_feedback.py  test_buttons.py
psychopy/balltask/data/001/: 001_DMN_Feedback_7_1.csv  001_DMN_Feedback_7_1.psydat  001_DMN_Feedback_7_slider_questions.csv
psychopy/balltask/data/sub-001/: sub-001_DMN_Feedback_1_1.csv  sub-001_DMN_Feedback_1_1.psydat  sub-001_DMN_Feedback_1_roi_outputs.csv  sub-001_DMN_Feedback_1_slider_questions.csv  sub-001_DMN_Feedback_2_1.csv  sub-001_DMN_Feedback_2_1.psydat  sub-001_DMN_Feedback_3_1.csv  sub-001_DMN_Feedback_3_1.psydat  sub-001_DMN_Feedback_3_roi_outputs.csv  sub-001_DMN_Feedback_4_1.csv  sub-001_DMN_Feedback_4_1.psydat  sub-001_DMN_Feedback_4_roi_outputs.csv  sub-001_DMN_Feedback_5_1.csv  sub-001_DMN_Feedback_5_1.psydat  sub-001_DMN_Feedback_5_roi_outputs.csv  sub-001_DMN_Feedback_6_roi_outputs.csv  sub-001_DMN_Feedback_9_roi_outputs.csv
psychopy/balltask/data/sub-123/: sub-123_DMN_Feedback_1_1.csv  sub-123_DMN_Feedback_1_1.psydat  sub-123_DMN_Feedback_1_roi_outputs.csv  sub-123_DMN_Feedback_2_1.csv  sub-123_DMN_Feedback_2_1.psydat  sub-123_DMN_Feedback_3_1.csv  sub-123_DMN_Feedback_3_1.psydat  sub-123_DMN_Feedback_3_roi_outputs.csv
psychopy/balltask/data/sub-kym/: sub-kym_DMN_Feedback_1_1.csv  sub-kym_DMN_Feedback_1_1.psydat  (+6 more)
psychopy/fixation/: FixationCross.desktop  FixationCrossTest.desktop  fixation_cross.py
scripts/: fetch_dry_run_bold.py  generate_fixation_cross.py  migrate_img_filenames.py  migrate_layout.py  populate_dry_run_cache.py  preflight_test.sh  smoke_dry_run.py
tests/: conftest.py  fakes.py  test_cleanup.py  test_config.py  test_dicom_receiver.py  test_e2e_session.py  test_executor_dicom.py  test_executor_fsl_stage_paths.py  test_external_image.py  test_fsl_subprocess.py  test_ica.py  test_integration.py  test_layout.py  test_managed_process.py  test_models.py  test_motion.py  test_murfi.py  test_preflight.py  test_psychopy.py  test_psychopy_script_lint.py  test_quality.py  test_scanner_source.py  test_session_runner.py  test_session_state.py  test_step_volume_rename.py  test_subjects.py  test_subjects_bids.py  test_synthetic_volumes.py  test_vsend_integration.py
tests/tui/: test_localizer.py  test_neurofeedback.py  test_process.py  test_session_select.py  test_subject_entry.py  test_widgets.py
(+22 files in other folders)
