[project]
name = "mindfulness-nf"
version = "0.1.0"
description = "Real-time fMRI neurofeedback pipeline targeting DMN/CEN for mindfulness training"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "pynetdicom>=3.0.4",
    "psychopy",
    "scipy>=1.12",
    "psychtoolbox",
    "pygame",
    "textual>=8.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-mock>=3.15",
    "pytest-timeout>=2.1",
    "textual-dev>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mindfulness-nf = "mindfulness_nf.__main__:main"
