[project]
name = "mindfulness-nf"
version = "0.1.0"
description = "Real-time fMRI neurofeedback pipeline targeting DMN/CEN for mindfulness training"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "nibabel>=5.0",
    "pydicom>=2.4",
    "pynetdicom>=3.0.4",
    "psychopy",
    "scipy>=1.12",
    "psychtoolbox",
    "pygame",
    "textual>=8.0",
]

[project.optional-dependencies]
# Optional extras installed only on explicit opt-in.
# Dev tooling lives under [dependency-groups] below so `uv sync` picks it
# up by default (see [tool.uv].default-groups).
dry-run = [
    "nilearn>=0.10",
]

[dependency-groups]
# PEP 735 groups — uv manages these separately from project optional-
# dependencies. The `dev` group is listed in [tool.uv].default-groups,
# so `uv sync` (bare) installs it automatically. `uv sync --no-default-groups`
# skips it for production-like installs.
dev = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-mock>=3.15",
    "pytest-timeout>=2.1",
    "textual-dev>=1.0",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mindfulness-nf = "mindfulness_nf.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
